[package]
name = "screentime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
serde_json = "1.0.96"
active-win-pos-rs = "0.7"
dirs = "5.0.0"
jammdb = "0.9.0"
serde = { version = "1.0.160", features = ["derive"] }
chrono = "0.4.24"
rmp-serde = "1.1.1"
rdev = "0.5.2"

