[package]
name = "screentime"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
serde_json = "*"
active-win-pos-rs = "*"
dirs = "*"
jammdb = "*"
serde = { version = "*", features = ["derive"] }
chrono = "*"
rmp-serde = "*"
rdev = "*"
single_value_channel = "*"
axum = "*"
axum-test-helper = "*"
mockall = "*"
rstest = "*"
tempfile = "*"
anyhow = "*"
mockall_double = "*"
